<resources>
    <string name="app_name">MobileDev-Rently</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="rently_logo">rently logo</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="menu">Menu</string>
    <string name="search_item">Search Item</string>
    <string name="profile">Profile</string>
    <string name="my_items">My Items</string>
    <string name="messages">Messages</string>
    <string name="bookings">Bookings</string>
    <string name="details">Details</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="search_term">Search item...</string>
    <string name="change">Change</string>
    <string name="Edit">Edit</string>
    <string name="pick">Pick</string>
    <string name="changePassword">Change Password</string>
    <string name="save">Save</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="add">Add</string>
    <string name="page1">My Bookings</string>
    <string name="page2">Rentals</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="available">Available</string>
    <string name="availability">Availability</string>
    <string name="rentingPeriod">Choose Your Renting Period</string>
    <string name="rentingPeriodChosen">Chosen Renting Period</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="until">Until</string>
    <string name="rent">Rent Now</string>
    <string name="location">Location</string>
    <string name="automatic_loction">Automatic Loction</string>
    <string name="address">Address</string>
    <string name="_20km">20km</string>
    <string name="city">City</string>
    <string name="delete">DELETE</string>
    <string name="accepted">ACCEPTED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="declined">DECLINED</string>
</resources>