<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search_item"
        android:icon="@drawable/search"
        android:title="@string/search_item"
        />
    <item
        android:id="@+id/navigation_booking"
        android:icon="@drawable/bookinglogo"
        android:title="@string/bookings"
        />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/menu"
        />
    <item
        android:id="@+id/navigation_my_items"
        android:icon="@drawable/items"
        android:title="@string/my_items"
        />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        />
</menu>