<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_screen"
    android:background="@color/background"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="202dp"
        android:layout_height="128dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="15dp"

        android:contentDescription="@string/rently_logo" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30sp"
        android:textColor="@color/text" />

    <EditText
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/email"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:background="#FFFFFF"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:textSize="23sp"/>


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30sp"
        android:textColor="@color/text" />

    <EditText
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:background="#FFFFFF"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        android:inputType="textPassword"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:textSize="23sp"/>


    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/button_background"
        android:text="@string/login"
        android:textColor="@color/button_text"
        android:fontFamily="sans-serif"
        android:textSize="33sp"
        app:cornerRadius="20dp" />


</LinearLayout>


