<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ItemDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/default_item"
                android:backgroundTint="@color/gray"
                android:background="#ECE5DC"
                android:focusable="true"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/category" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#ECE5DC">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    >

                </TextView>

            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/description" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#ECE5DC">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    >
                </TextView>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:text="@string/from" />
                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    android:text="@string/date"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:background="@color/white"
                    android:text="@string/until" />
                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    android:text="@string/date"
                    />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#ECE5DC">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rentingPeriod"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    >
                </TextView>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:text="@string/date" />
                <TextView
                    android:id="@+id/pickupDate"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="85dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    />
                <Button
                    android:id="@+id/pickupDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/pick"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    >
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:background="@color/white"
                    android:text="@string/time" />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="17sp"
                    />
                <Button
                    android:id="@+id/timeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/pick">
                </Button>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#ECE5DC">
                <Button
                    android:id="@+id/rentButton"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/button_background"
                    android:fontFamily="sans-serif"
                    android:text="@string/rent"
                    android:textColor="@color/button_text"
                    android:textSize="25sp"
                    app:cornerRadius="5dp"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center_horizontal"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                >
            </TextView>

        </LinearLayout>
    </ScrollView>


</FrameLayout>