<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/start_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="202dp"
            android:layout_marginBottom="15dp"
            android:layout_height="128dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/rently_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/text"
            android:textSize="30sp" />

        <EditText
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/username"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:textSize="23sp"/>


        <TextView
            android:layout_width="300dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textSize="30sp" />


        <EditText
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:hint="@string/email"
            android:textSize="23sp"/>


        <TextView
            android:layout_width="300dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textSize="30sp" />


        <EditText
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="#FFFFFF"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/white"
            android:inputType="textPassword"
            app:boxStrokeColor="@color/black"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:hint="@string/password"
            android:textSize="23sp"/>



        <Button
            android:id="@+id/register"
            android:layout_marginVertical="70dp"
            android:layout_width="300dp"
            android:layout_height="72dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/button_background"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/button_text"
            android:textSize="33sp"
            app:cornerRadius="20dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>